--- a/TL-2-BrainStorm.ipynb
+++ b/TL-2-BrainStorm.ipynb
@@ -2737,81 +2737,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 273,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0                 [12, 14, 10751]\n",
-       "1             [14, 12, 16, 10751]\n",
-       "2                   [12, 28, 878]\n",
-       "3                 [16, 35, 10751]\n",
-       "4                   [28, 878, 12]\n",
-       "5                 [12, 14, 10751]\n",
-       "6               [28, 12, 14, 878]\n",
-       "7                 [16, 10751, 35]\n",
-       "8                 [16, 10751, 35]\n",
-       "9        [16, 28, 35, 10751, 878]\n",
-       "10                [16, 35, 10751]\n",
-       "11                [10751, 14, 12]\n",
-       "12                   [53, 12, 28]\n",
-       "13                    [16, 10751]\n",
-       "14                       [27, 80]\n",
-       "15            [12, 14, 18, 10749]\n",
-       "16                  [28, 53, 878]\n",
-       "17                 [10402, 10749]\n",
-       "18                   [28, 18, 53]\n",
-       "19                 [18, 53, 9648]\n",
-       "20             [28, 18, 9648, 53]\n",
-       "21                       [28, 35]\n",
-       "22                [12, 10751, 14]\n",
-       "23                    [18, 10749]\n",
-       "24           [53, 28, 12, 35, 80]\n",
-       "25                       [18, 36]\n",
-       "26               [28, 35, 80, 53]\n",
-       "27            [28, 12, 10751, 14]\n",
-       "28              [28, 878, 12, 53]\n",
-       "29                           [18]\n",
-       "                   ...           \n",
-       "26487                        [27]\n",
-       "26488                        [27]\n",
-       "26489                        [99]\n",
-       "26490                        [27]\n",
-       "26491                        [53]\n",
-       "26492                          []\n",
-       "26493                        [27]\n",
-       "26494                        [18]\n",
-       "26495                          []\n",
-       "26496                        [99]\n",
-       "26497                          []\n",
-       "26498                          []\n",
-       "26499                        [27]\n",
-       "26500                          []\n",
-       "26501                        [27]\n",
-       "26502                        [16]\n",
-       "26503                        [99]\n",
-       "26504                [27, 35, 27]\n",
-       "26505                    [27, 53]\n",
-       "26506                          []\n",
-       "26507                        [99]\n",
-       "26508                        [16]\n",
-       "26509                        [27]\n",
-       "26510                        [99]\n",
-       "26511                        [99]\n",
-       "26512                    [27, 18]\n",
-       "26513                    [18, 53]\n",
-       "26514                [14, 28, 12]\n",
-       "26515             [10751, 12, 28]\n",
-       "26516                    [53, 27]\n",
-       "Name: genre_ids, Length: 26517, dtype: object"
-      ]
-     },
-     "execution_count": 270,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def str_num(s):\n",
     "    ''' convert s to a list of numbers\n",
@@ -2822,365 +2750,33 @@
     "    # strip all punctuation from a string \n",
     "    s = s.translate(str.maketrans('', '', string.punctuation))\n",
     "    # string to list \n",
-    "    s_list = [int(n) for n in s.split()]\n",
-    "    return s_list\n",
-    "\n",
-    "tmdb_movies['genre_ids'].apply(str_num)"
+    "    #s_list = [int(n) for n in s.split()]\n",
+    "    return s.split()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>[12, 14, 10751]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>[14, 12, 16, 10751]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>[12, 28, 878]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>[16, 35, 10751]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>[28, 878, 12]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>[12, 14, 10751]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>[28, 12, 14, 878]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>[16, 10751, 35]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>[16, 10751, 35]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>[16, 28, 35, 10751, 878]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>[16, 35, 10751]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>[10751, 14, 12]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>[53, 12, 28]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>[16, 10751]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>[27, 80]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>[12, 14, 18, 10749]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>[28, 53, 878]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>[10402, 10749]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>[28, 18, 53]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>[18, 53, 9648]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>[28, 18, 9648, 53]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>[28, 35]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>[12, 10751, 14]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>[18, 10749]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>[53, 28, 12, 35, 80]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>[18, 36]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>[28, 35, 80, 53]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>[28, 12, 10751, 14]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>[28, 878, 12, 53]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>[18]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26487</th>\n",
-       "      <td>[27]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26488</th>\n",
-       "      <td>[27]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26489</th>\n",
-       "      <td>[99]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26490</th>\n",
-       "      <td>[27]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26491</th>\n",
-       "      <td>[53]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26492</th>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26493</th>\n",
-       "      <td>[27]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26494</th>\n",
-       "      <td>[18]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26495</th>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26496</th>\n",
-       "      <td>[99]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26497</th>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26498</th>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26499</th>\n",
-       "      <td>[27]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26500</th>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26501</th>\n",
-       "      <td>[27]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26502</th>\n",
-       "      <td>[16]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26503</th>\n",
-       "      <td>[99]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26504</th>\n",
-       "      <td>[27, 35, 27]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26505</th>\n",
-       "      <td>[27, 53]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26506</th>\n",
-       "      <td>[]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26507</th>\n",
-       "      <td>[99]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26508</th>\n",
-       "      <td>[16]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26509</th>\n",
-       "      <td>[27]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26510</th>\n",
-       "      <td>[99]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26511</th>\n",
-       "      <td>[99]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26512</th>\n",
-       "      <td>[27, 18]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26513</th>\n",
-       "      <td>[18, 53]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26514</th>\n",
-       "      <td>[14, 28, 12]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26515</th>\n",
-       "      <td>[10751, 12, 28]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26516</th>\n",
-       "      <td>[53, 27]</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>26517 rows × 1 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                              0\n",
-       "0               [12, 14, 10751]\n",
-       "1           [14, 12, 16, 10751]\n",
-       "2                 [12, 28, 878]\n",
-       "3               [16, 35, 10751]\n",
-       "4                 [28, 878, 12]\n",
-       "5               [12, 14, 10751]\n",
-       "6             [28, 12, 14, 878]\n",
-       "7               [16, 10751, 35]\n",
-       "8               [16, 10751, 35]\n",
-       "9      [16, 28, 35, 10751, 878]\n",
-       "10              [16, 35, 10751]\n",
-       "11              [10751, 14, 12]\n",
-       "12                 [53, 12, 28]\n",
-       "13                  [16, 10751]\n",
-       "14                     [27, 80]\n",
-       "15          [12, 14, 18, 10749]\n",
-       "16                [28, 53, 878]\n",
-       "17               [10402, 10749]\n",
-       "18                 [28, 18, 53]\n",
-       "19               [18, 53, 9648]\n",
-       "20           [28, 18, 9648, 53]\n",
-       "21                     [28, 35]\n",
-       "22              [12, 10751, 14]\n",
-       "23                  [18, 10749]\n",
-       "24         [53, 28, 12, 35, 80]\n",
-       "25                     [18, 36]\n",
-       "26             [28, 35, 80, 53]\n",
-       "27          [28, 12, 10751, 14]\n",
-       "28            [28, 878, 12, 53]\n",
-       "29                         [18]\n",
-       "...                         ...\n",
-       "26487                      [27]\n",
-       "26488                      [27]\n",
-       "26489                      [99]\n",
-       "26490                      [27]\n",
-       "26491                      [53]\n",
-       "26492                        []\n",
-       "26493                      [27]\n",
-       "26494                      [18]\n",
-       "26495                        []\n",
-       "26496                      [99]\n",
-       "26497                        []\n",
-       "26498                        []\n",
-       "26499                      [27]\n",
-       "26500                        []\n",
-       "26501                      [27]\n",
-       "26502                      [16]\n",
-       "26503                      [99]\n",
-       "26504              [27, 35, 27]\n",
-       "26505                  [27, 53]\n",
-       "26506                        []\n",
-       "26507                      [99]\n",
-       "26508                      [16]\n",
-       "26509                      [27]\n",
-       "26510                      [99]\n",
-       "26511                      [99]\n",
-       "26512                  [27, 18]\n",
-       "26513                  [18, 53]\n",
-       "26514              [14, 28, 12]\n",
-       "26515           [10751, 12, 28]\n",
-       "26516                  [53, 27]\n",
-       "\n",
-       "[26517 rows x 1 columns]"
-      ]
-     },
-     "execution_count": 240,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'translate'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-274-1969bc073a27>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# 1. covert genre_ids [12, 14, 10751] in to columns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtmdb_movies\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'genre_ids'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtmdb_movies\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'genre_ids'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr_num\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mtmdb_movies\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'genre_ids'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSeries\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/pandas/core/series.py\u001b[0m in \u001b[0;36mapply\u001b[0;34m(self, func, convert_dtype, args, **kwds)\u001b[0m\n\u001b[1;32m   3589\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3590\u001b[0m                 \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobject\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3591\u001b[0;31m                 \u001b[0mmapped\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap_infer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconvert\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconvert_dtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3592\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3593\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmapped\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmapped\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mSeries\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/lib.pyx\u001b[0m in \u001b[0;36mpandas._libs.lib.map_infer\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-273-7dc4a7faa32f>\u001b[0m in \u001b[0;36mstr_num\u001b[0;34m(s)\u001b[0m\n\u001b[1;32m      6\u001b[0m     '''\n\u001b[1;32m      7\u001b[0m     \u001b[0;31m# strip all punctuation from a string\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranslate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmaketrans\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstring\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpunctuation\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m     \u001b[0;31m# string to list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0;31m#s_list = [int(n) for n in s.split()]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'translate'"
+     ]
     }
    ],
    "source": [
     "# 1. covert genre_ids [12, 14, 10751] in to columns\n",
+    "tmdb_movies['genre_ids'] = tmdb_movies['genre_ids'].apply(str_num)\n",
     "tmdb_movies['genre_ids'].apply(pd.Series)"
    ]
   },
