--- a/Combining Tables on Movie Titles - export - tl.ipynb
+++ b/Combining Tables on Movie Titles - export - tl.ipynb
@@ -9426,11 +9426,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "result.to_csv('tmdb_box_merge.csv',sep='\\t', encoding='utf-8')"
+    "result.to_csv('tmdb_box_merge.csv', encoding='utf-8')"
    ]
   },
   {
