export tmdb_box_merge_new

--- a/Combining Tables on Movie Titles - export - tl.ipynb
+++ b/Combining Tables on Movie Titles - export - tl.ipynb
@@ -9224,7 +9224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# export result dataframe tmdb_box"
+    "### Rename index to title col"
    ]
   },
   {
@@ -9422,6 +9422,13 @@
    ],
    "source": [
     "result.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# export result dataframe tmdb_box"
    ]
   },
   {
