--- a/Project1_Movie_Industry_Analysis.ipynb
+++ b/Project1_Movie_Industry_Analysis.ipynb
@@ -72,7 +72,7 @@
     "\n",
     "\n",
     "## Data Pre-processing\n",
-    "*Details can be found in 2 jupyter notebooks in this project repository:*\n",
+    "*Details can be found in 2 jupyter notebooks in folder `data_cleaning`:*\n",
     "1. *[Project1_Part1_Data-Merge-Clean-Export-a.ipynb](https://github.com/nateej1/Mod_1_Project_TL_NJ/blob/master/Project1_Part1_Data-Merge-Clean-Export-a.ipynb)*\n",
     "2. *[Project1_Part1_Data-Merge-Clean-Export-b.ipynb](https://github.com/nateej1/Mod_1_Project_TL_NJ/blob/master/Project1_Part1_Data-Merge-Clean-Export-b.ipynb)*\n",
     "\n",
